<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">OwlsNest</string>
    <string name="header_category">OwlsNest</string>
    <string name="title">OwlsNest</string>
    <string name="owlsnest_summary_title">Home of the Kronic</string>
    <string name="title_clipboard_share">Copy to Clipboard</string>
    <string name="clipboard_notification">Copied to clipboard</string>
    <string name="header_summary">@null</string>
    <string name="menu_main_activity_change_locale">Locale</string>
    <string name="aosip_version">AOSiP version</string>
    <string name="aosip_version_default">Unknown</string>
    <string name="cpu_info">CPU</string>
    <string name="mem_info">Memory</string>
    <string name="build_date">Build date</string>
    <string name="header_category_personalization">UI settings</string>
    <string name="custom_title">OwlsNest</string>
    <string name="aosip_title">AOSiP Settings</string>
    <string name="owlsnest_settings_title">Categories</string>
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="attention">Attention</string>
    <string name="enabled">Enabled</string>
    <string name="default_string">Default</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="choose_app">Choose app</string>
    <string name="empty_title">Empty</string>
    <string name="normal_title">Normal</string>
    <string name="hidden_title">Hidden</string>
    <string name="position_title">Position</string>
    <string name="position_right_title">Right</string>
    <string name="position_centered_title">Centered</string>
    <string name="help">Help</string>
    <string name="reset_message">Reset all entries to default?</string>
    <string name="profiles_add">Add...</string>
    <string name="profile_choose_app">Choose app</string>
    <string name="profile_reset_title">Reset</string>
    <string name="show_title">Show</string>
    <string name="text_title">Text</string>
    <string name="icon_title">Icon</string>
    <string name="color_title">Color</string>
    <string name="colors_title">Colors</string>
    <string name="statusbar_bar_title">Statusbar</string>
    <string name="statusbar_bar_summary">Adjust various statusbar elements</string>
    <string name="clock_category">Clock</string>
    <string name="battery_category">Battery</string>
    <string name="icon_category">Icons</string>
    <string name="traffic_category">Network Traffic</string>
    <string name="statusbar_items_category">Statusbar items</string>
    <string name="clock_title_enable">Alignment</string>
    <string name="status_bar_show_clock_title">Show clock and date</string>
    <string name="status_bar_clock_seconds_title">Show seconds</string>
    <string name="status_bar_am_pm_title">AM/PM</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="right_clock">Right clock</string>
    <string name="center_clock">Center clock</string>
    <string name="left_clock">Left clock</string>
    <string name="clock_date_display">Date</string>
    <string name="clock_date_style">Date style</string>
    <string name="clock_date_position">Date position</string>
    <string name="clock_date_format">Date format</string>
    <string name="clock_date_string_edittext_title">Must be in DateFormat eg. MM/dd/yy</string>
    <string name="clock_date_string_edittext_summary">Enter string</string>
    <string name="clock_date_right">Right of time</string>
    <string name="clock_date_left">Left of time</string>
    <string name="clock_am_pm_date_normal">Normal</string>
    <string name="clock_am_pm_date_small">Small</string>
    <string name="clock_am_pm_date_none">Hidden</string>
    <string name="clock_date_style_lowercase">Lowercase</string>
    <string name="clock_date_style_uppercase">Uppercase</string>
    <string name="clock_date_format_custom">Custom java format</string>
    <string name="clock_font_style_title">Font</string>
    <string name="clock_font_size_title">Font size</string>
    <string name="ticker_screen_title">Ticker</string>
    <string name="ticker_title">Status Bar Ticker</string>
    <string name="ticker_screen_summary">Customize the ticker style</string>
    <string name="ticker_summary">Enable the old status bar ticker</string>
    <string name="ticker_restore_defaults_title">Restore defaults</string>
    <string name="ticker_font_style_title">Font Style</string>
    <string name="ticker_font_size_title">Font Size</string>
    <string name="status_bar_battery_style_category">Battery</string>
    <string name="status_bar_battery_style_title">Battery status style</string>
    <string name="status_bar_battery_style_icon_portrait">Icon portrait</string>
    <string name="status_bar_battery_style_icon_landscape">Icon landscape</string>
    <string name="status_bar_battery_style_circle">Circle</string>
    <string name="status_bar_battery_style_bigcircle">Big Circle</string>
    <string name="status_bar_battery_style_solid">Solid</string>
    <string name="status_bar_battery_style_text">Text</string>
    <string name="status_bar_battery_style_hidden">Hidden</string>
    <string name="status_bar_battery_percentage_title">Battery percentage</string>
    <string name="status_bar_battery_percentage_default">Hidden</string>
    <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
    <string name="status_bar_battery_percentage_text_next">Next to the icon</string>
    <string name="status_bar_battery_style_tile_title">Custom battery tile style</string>
    <string name="status_bar_battery_style_tile_summary">Allow to set the same icon style chosen for the statusbar battery</string>
    <string name="status_bar_charge_color_title">Statusbar battery icon charging color</string>
    <string name="status_bar_charge_color_summary">Set the color of the statusbar battery icon while charging</string>
    <string name="force_charge_battery_text_title">Statusbar battery charging percent</string>
    <string name="force_charge_battery_text_summary_on">Show the battery percentage outside the icon while charging</string>
    <string name="force_charge_battery_text_summary_off">Show the battery percentage inside the icon while charging</string>
    <string name="text_charging_symbol_title">Charging symbol near percentage text</string>
    <string name="text_charging_symbol_dialog">Show a symbol near percentage text outside the battery icon when charging</string>
    <string name="text_charging_symbol_default">Disabled</string>
    <string name="text_charging_symbol_flash">Flash</string>
    <string name="text_charging_symbol_tilde">Tilde</string>
    <string name="battery_bar_title">Battery bar</string>
    <string name="battery_bar">Battery bar location</string>
    <string name="battery_bar_no_navbar">Battery bar location</string>
    <string name="battery_bar_color">Battery bar color</string>
    <string name="battery_bar_charging_color">Battery bar charging color</string>
    <string name="battery_bar_battery_low_color">Battery bar low battery color</string>
    <string name="battery_bar_cat">Battery bar style</string>
    <string name="battery_bar_style_title">Battery bar alignment</string>
    <string name="battery_bar_thickness_title">Battery bar thickness</string>
    <string name="battery_bar_animate_title">Charging animation</string>
    <string name="battery_bar_style_regular">Regular</string>
    <string name="battery_bar_style_center_mirrored">Center-mirrored</string>
    <string name="battery_bar_style_reversed">Reversed</string>
    <string name="battery_bar_use_charging_color">Custom charging color</string>
    <string name="battery_bar_blend_color_title">Blend colors</string>
    <string name="battery_bar_blend_color_summary">Blend full/empty colors corresponding to battery percentage</string>
    <string name="battery_bar_blend_color_reverse_title">Reverse color direction</string>
    <string name="battery_bar_blend_color_reverse_summary_off">Full &#8594; empty: red &#8592; green &#8592; blue &#8592; red</string>
    <string name="battery_bar_blend_color_reverse_summary_on">Full &#8594; empty: red &#8594; green &#8594; blue &#8594; red</string>
    <string name="carrier_label_settings_title">Carrier Label</string>
    <string name="carrier_label_settings_summary">Customize the carrier label</string>
    <string name="custom_carrier_label_title">Custom carrier label</string>
    <string name="custom_carrier_label_explain">Please enter a new label. Leave blank to revert to stock label.</string>
    <string name="custom_carrier_label_notset">Custom label currently not set</string>
    <string name="show_carrier_title">Carrier label</string>
    <string name="show_carrier_disabled">Disabled</string>
    <string name="show_carrier_keyguard">Lockscreen only</string>
    <string name="show_carrier_statusbar">Statusbar only</string>
    <string name="show_carrier_enabled">Lockscreen &amp; statusbar</string>
    <string name="network_traffic_title">Network traffic</string>
    <string name="show_network_traffic_state">Status bar traffic monitor</string>
    <string name="show_network_traffic_unit">Display unit</string>
    <string name="show_network_traffic_frequency">Update interval</string>
    <string name="show_network_traffic_disable">Disabled</string>
    <string name="show_network_traffic_up">Outgoing</string>
    <string name="show_network_traffic_down">Incoming</string>
    <string name="show_network_traffic_all">Outgoing and incoming</string>
    <string name="show_network_traffic_bit">Bits per second</string>
    <string name="show_network_traffic_byte">Bytes per second</string>
    <string name="show_network_traffic_500">500 ms</string>
    <string name="show_network_traffic_1000">1000 ms</string>
    <string name="show_network_traffic_1500">1500 ms</string>
    <string name="show_network_traffic_2000">2000 ms</string>
    <string name="network_traffic_autohide">Auto hide</string>
    <string name="network_traffic_autohide_summary">Hide the traffic monitor when there is no activity</string>
    <string name="network_traffic_autohide_threshold">Inactivity threshold</string>
    <string name="network_traffic_hidearrow">Hide arrows</string>
    <string name="network_traffic_hidearrow_summary">Hide the arrows in the traffic indicators</string>
    <string name="weather_category">Weather</string>
    <string name="status_bar_temperature_title">Statusbar weather temperature</string>
    <string name="status_bar_temperature_hidden">Hidden</string>
    <string name="status_bar_temperature_show_scale">Shown with scale</string>
    <string name="status_bar_temperature_hide_scale">Shown without scale</string>
    <string name="status_bar_temperature_location_title">Placement</string>
    <string name="status_bar_temperature_location_summary">Select where the weather temperature is shown on the statusbar</string>
    <string name="status_bar_temperature_location_right">Show on right</string>
    <string name="status_bar_temperature_location_left">Show on left</string>
    <string name="powermenu_category">Power</string>
    <string name="power_menu_reboot_title">Reboot menu</string>
    <string name="power_menu_screenshot_title">Screenshot</string>
    <string name="power_menu_airplane_title">Airplane mode</string>
    <string name="power_menu_users_title">User switcher</string>
    <string name="power_menu_search_title">Search</string>
    <string name="power_menu_voice_title">Voice search</string>
    <string name="power_menu_settings_title">Settings shortcut</string>
    <string name="power_menu_lockdown_title">Device lockdown</string>
    <string name="power_menu_bug_report_title">Bug report</string>
    <string name="power_menu_sound_title">Sound panel</string>
    <string name="power_menu_screenrecord_title">Screenrecord</string>
</resources>