<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2017 Android Open Source Illusion Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:layout="@layout/tab_ui"
    android:title="@string/powermenu_category" >

    <SwitchPreference
        android:key="reboot"
        android:title="@string/power_menu_reboot_title"
        android:defaultValue="true" />

    <SwitchPreference
        android:key="screenshot"
        android:title="@string/power_menu_screenshot_title"
        android:defaultValue="false" />

    <SwitchPreference
        android:key="screenrecord"
        android:title="@string/power_menu_screenrecord_title"
        android:defaultValue="false" />

    <SwitchPreference
        android:key="torch"
        android:title="@string/power_menu_torch_title"
        android:defaultValue="false" />

    <SwitchPreference
        android:key="airplane"
        android:title="@string/power_menu_airplane_title"
        android:defaultValue="true" />

    <SwitchPreference
        android:key="users"
        android:title="@string/power_menu_users_title"
        android:defaultValue="false" />

    <SwitchPreference
        android:key="settings"
        android:title="@string/power_menu_settings_title"
        android:defaultValue="false" />

    <SwitchPreference
        android:key="lockdown"
        android:title="@string/power_menu_lockdown_title"
        android:defaultValue="false" />

    <SwitchPreference
        android:key="assist"
        android:title="@string/power_menu_search_title"
        android:defaultValue="false" />

    <SwitchPreference
        android:key="voiceassist"
        android:title="@string/power_menu_voice_title"
        android:defaultValue="false" />

    <SwitchPreference
        android:key="bugreport"
        android:title="@string/power_menu_bug_report_title"
        android:defaultValue="false" />

    <SwitchPreference
        android:key="silent"
        android:title="@string/power_menu_sound_title"
        android:defaultValue="true" />

</PreferenceScreen>

